--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
 @charset "UTF-8";
+/*
+  IST 256 - Web Application Group Project
+  Group: 7
+  Members:
+  - Eyan Jaffery
+  - Michael Litka
+  - Jeffery Gaskin
+*/
+
 /*!
 * Start Bootstrap - Shop Homepage v5.0.6 (https://startbootstrap.com/template/shop-homepage)
 * Copyright 2013-2023 Start Bootstrap
