--- a/css/styles.css
+++ b/css/styles.css
@@ -10842,3 +10842,12 @@ textarea.form-control-lg {
 .invalid-input {
   border-color: red;
 }
+
+/** Product Toggle Styles  for description**/
+.product-toggle {
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+.product-toggle:hover {
+  color: #007bff; /* Change to your desired hover color */
+}
